--- a/src/components/Swap/SwapButton/SwapButton.module.css
+++ b/src/components/Swap/SwapButton/SwapButton.module.css
@@ -1,4 +1,4 @@
 .button_container {
     margin: 0.5rem 0;
-    padding-top: 0.5rem;
+    
 }
